--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "beemanagerbackend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/api/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/api/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +14,11 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rescue": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0"
   }
 }
